# connect4-game

./: README.md
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
backend/src/: core.py  main.py
backend/src/api/: crud.py  fields.py  models.py  shortcuts.py  views.py  websocket.py
backend/src/db/: client.py  utils.py
backend/tests/: test_core.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/games/[id]/join/: page.tsx
frontend/src/components/: theme-button.tsx
frontend/types/: validator.ts
