[project]
name = "connect4game"
version = "0.1.0"
description = "Tutorial of FastAPI and NextJS"
authors = [
    {name = "Yasaman Parhizkar",email = "yasaman.parhizkar@gmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
